[project]
name = "duo-tracker"
version = "0.1.0"
description = "Daily Duolingo course-progress snapshots (units, lessons, XP, streak) for the family's Portuguese course, logged to Postgres via reverse-engineered endpoints."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
]

[project.scripts]
duo-tracker = "duo_tracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duo_tracker"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]
